# LLP-PROJECT2

./: Bitmap.c  CMakeLists.txt  FileProcessing.c  GrayScale.c  Histogram.c  README.md  Stegnography.c  launcher.c  main.c
Headers/: Bitmap.h  FileProcessing.h  GrayScale.h  Histogram.h  Stegnography.h  launcher.h
